[metadata]
name = hmy_tools
version = 1.0.0
author = EasyNode.PRO
author_email = support@easynode.pro
description = Harmony ONE command line wallet tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easy-node-pro/hmy_tools
project_urls =
    Bug Tracker = https://github.com/easy-node-pro/hmy_tools/issues
    repository = https://github.com/easy-node-pro/hmy_tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = harmony_utils
packages = find:
python_requires = >=3.8

[options.packages.find]
where = harmony_utils